# QCForComputerScientists

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  qccomplex.cpp  qccomplex.h
tests/: CMakeLists.txt  qccomplex_test.cpp
